--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           Front-End Developer e estudante de <br />
           Engenharia de software
         </p>
-        <button>Contatar</button>
+        <a class="button-contact" href="#seção4">Contratar</a>
       </main>
       <h2 id="seção1" class="h2-sobre">Sobre</h2>
       <div class="sobre">
@@ -47,7 +47,7 @@
         <img src="./assets/git.png" />
         <img src="./assets/github.png" />
       </div>
-      <div class="projects">
+      <div id="contato" class="projects">
         <h1 id="seção3" class="h1-trabalhos">Trabalhos</h1>
         <p class="p-projects">Todos Meus Projetos Disponiveis no meu GitHub 
         </p>
@@ -62,7 +62,7 @@
             <input type="email" name="email" placeholder="Email" required>
 
             <textarea cols="30" rows="10" name="message" placeholder="Do que se trata seu projeto"></textarea>
-            <button type="submit">Enviar</button>
+            <button class="button-submit" type="submit">Enviar</button>
 
           <input type="hidden" name='_subject' value="Novo Contato">
           <input type="text" name="_honey" style="display: none;">
