alteração css,index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           Oi! Sou o <span class="jhoran-span">Jhoran Pablo</span>
         </h2>
         <p>
-          Front-End Developer e estudante de <br />
+          Desenvolvedor Web e estudante de <br />
           Engenharia de software
         </p>
         <a class="button-contact" href="#seção4">Contratar</a>
@@ -58,15 +58,15 @@
       <div class="form">
         <form id="seção4" action="https://formsubmit.co/jhoranpablodev@gmail.com" method="POST">
           <p class="p-form"> Estou disponivel a realizar e ajudar nos projetos</p>
-          <input type="text" name="name" placeholder="Nome" required    />
-            <input type="email" name="email" placeholder="Email" required>
+          <input class="form" type="text" name="name" placeholder="Nome" required    />
+            <input class="form" type="email" name="email" placeholder="Email" required>
 
             <textarea cols="30" rows="10" name="message" placeholder="Do que se trata seu projeto"></textarea>
             <button class="button-submit" type="submit">Enviar</button>
 
-          <input type="hidden" name='_subject' value="Novo Contato">
-          <input type="text" name="_honey" style="display: none;">
-          <input type="hidden" name="_captcha" value="false">
+          <input  type="hidden" name='_subject' value="Novo Contato">
+          <input  type="text" name="_honey" style="display: none;">
+          <input c type="hidden" name="_captcha" value="false">
         </form>
       </div>
     </div>
